2006-02-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/tie-formatting-problem.cc (set_chord_outline): put dots
	in outline too.  
	(generate_configuration): for small ties, also look for collisions
	at Y + DIR*h + DELTA_Y.
	(get_variations): consider variation for dot positions too.

	* lily/side-position-interface.cc (aligned_side): take abs for
	quantized rounded position. Fixes tenuto below staff.

	* scm/stencil.scm (annotate-y-interval): robustify: print nan/inf
	markers when necessary.

	* lily/program-option.cc (internal_set_option): add
	strict_infinity_checking option.

	* scm/output-lib.scm (cyan): swap yellow and cyan.

2006-02-19  Graham Percival  <gpermus@gmail.com>

	* darwin.patch: trivial linenumber update.

	* Documentation/user/ {various}: `\context foo = named' changed
	to `\new foo = "name"' in docs.

2006-02-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/stencil.scm (annotate-y-interval): use it.

	* scm/lily-library.scm (interval-sane?): new function.

	* buildscripts/mf-to-table.py (Char_metric.__init__): remove
	tfm_checksum stuff.

	* lily/tie-formatting-problem.cc (from_lv_ties): add heads for
	common refpoint.

	* flower/include/std-vector.hh (iterof): add iterof macro.

	* lily/enclosing-bracket.cc (width): new function.

	* lily/align-interface.cc (align_elements_to_extents): reinstate
	warning.

2006-02-18  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/index.html.in: fix spelling: thankyous.

2006-02-18  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/lyric-hyphen.cc: typo.

2006-02-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* stepmake/stepmake/c++-rules.make ($(outdir)/%.cc
	$(outdir)/%.hh): generate h and c in one rule; otherwise -jX
	builds don't work. 

	* VERSION: release 2.7.35

	* lily/beam.cc (get_default_dir): oops. Take abs () for
	extremes[DOWN].
	(get_default_dir): use extreme position criterion only in absence
	of forced stem directions.

	* VERSION (PATCH_LEVEL): bump VERSION.
