@@ -434,8 +434,8 @@ Tie_formatting_problem::score_configuration (Tie_configuration const &conf) cons
 {
   Real penalty = 0.0;
   Real length = conf.attachment_x_.length ();
-  if (length < details_.min_length_)
-    penalty += details_.length_penalty_factor_ / max (0.01, length);
+
+  penalty += peak_around (0.5 * details_.min_length_, details_.min_length_, length);
 
   Real tip_pos = conf.position_ + conf.delta_y_ / 0.5 * details_.staff_space_;
   Real tip_y = tip_pos * details_.staff_space_ * 0.5;
